[tool.poetry]
name = "mawaqit-api"
version = "0.1.0"
description = "mawaqit api web api"
authors = ["Sofiane Louchene <mrsofianelouchene@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mawaqit_api"}]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
